Add Java8 support (#353)
* Switch the default build for subprojects to Java 8

All submodules for the project now target Java 8 as the minimum
supported version. Some operations module like e2e-testing still use
Java 11 due to dependency constraints

* Make detector-resources compatible with Java8

* Make exporter-trace compatible with Java 8

* Make exporter-metrics compatible with Java 8

* Make propagators-gcp compatible with Java 8

* Make shared-resourcemapping compatible with Java 8

* fix style issues with spotless

* fix typo

* Update docker image to include JDK 8

The docker image used in e2e tests requires JDK8 to compile and build
trace exporter and gcp propagators. JDK8 is explicitly required because
the builds of these artifacts are configured using toolchains.

* Set language version in root project to Java 11

Setting the language version in root project to 11 avoids the need of
having multiple JDKs to build all artifacts in this project.

Java 8 bytecode compatibility is ensured using --release flag in Java
compiler available starting Java 9.

* Additional JDK 8 installaion no longer required

* Add comment explaining need for Java 11

* Revert changes to make tests compatible with Java 8

* Java 11 not required to Run this example

Java 11 specific APIs were only used in tests.

* Update README to indicate Java version compatibility

* Feedback: remove afterEvaluate and use singletonMap